Fixed margins, fixed overflow, added layout

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,6 @@
   margin: 0;
   font-family: Inter;
   text-decoration: none;
-  color: black
+  color: black;
+  overflow: auto;
 }
